--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/bencoveney/Canvas#readme",
   "devDependencies": {
-    "grunt-typescript": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0"
+    "grunt-sass": "^1.1.0",
+    "grunt-typescript": "^0.9.2",
+    "tsd": "^0.6.5"
   }
 }
