--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "grunt-typescript": "^0.8.0",
+    "time-grunt": "^1.3.0",
     "tsd": "^0.6.5"
   }
 }
