--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "HTML",
     "Canvas",
     "Experiments",
-	"TypeScript",
-	"JavaScript",
-	"Quadrilactic",
-	"Space",
-	"Game"
+    "TypeScript",
+    "JavaScript",
+    "Quadrilactic",
+    "Space",
+    "Game"
   ],
   "author": "Ben Coveney",
   "license": "ISC",
@@ -26,8 +26,10 @@
   "devDependencies": {
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
+    "grunt-tslint": "^3.0.3",
     "grunt-typescript": "^0.8.0",
     "time-grunt": "^1.3.0",
-    "tsd": "^0.6.5"
+    "tsd": "^0.6.5",
+    "tslint": "^3.7.1"
   }
 }
