--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
   },
   "homepage": "https://github.com/bencoveney/Quadrilactic#readme",
   "devDependencies": {
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "grunt-tslint": "^3.0.3",
     "grunt-typescript": "^0.8.0",
+    "grunt-webpack": "^1.0.11",
+    "source-map-loader": "^0.1.5",
     "time-grunt": "^1.3.0",
     "tsd": "^0.6.5",
-    "tslint": "^3.7.1"
+    "tslint": "^3.7.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
